--- a/src/Presentation/Login.form
+++ b/src/Presentation/Login.form
@@ -123,14 +123,14 @@
       </Events>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="10" y="320" width="-1" height="-1"/>
+          <AbsoluteConstraints x="20" y="300" width="-1" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
     <Component class="javax.swing.JLabel" name="fl_fondo">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-          <Image iconType="3" name="/Images/fondo5.png"/>
+          <Image iconType="3" name="/Images/fondo_login.png"/>
         </Property>
       </Properties>
       <Constraints>
